--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,10 @@ if(USE_CUDA)
 find_package(CUDA 9.0 REQUIRED)
 message(STATUS "Found CUDA ${CUDA_VERSION_STRING} at ${CUDA_TOOLKIT_ROOT_DIR}")
 message("---- CUDA_INCLUDE_DIRS   = ${CUDA_INCLUDE_DIRS}")
-message("---- CUDA_LIBRARIES      = ${CUDA_LIBRARIES}" )   
+message("---- CUDA_LIBRARIES      = ${CUDA_LIBRARIES} ${CUDA_cusolver_LIBRARY}" )   
 message("---- CUDA_CUBLAS_LIBRARIES    = ${CUDA_CUBLAS_LIBRARIES}" )   
 target_include_directories(cudacomp PUBLIC ${CUDA_INCLUDE_DIRS})
-target_link_libraries(cudacomp PRIVATE ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES}) 
+target_link_libraries(cudacomp PRIVATE ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} ${CUDA_cusolver_LIBRARY}) 
 target_compile_options(cudacomp PUBLIC -DHAVE_CUDA)
 endif(USE_CUDA)
 
