--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ set(INCLUDEFILES
 
 
 
-# DEFAULT SETTINGS 
+# DEFAULT SETTINGS
 # Do not change unless needed
 # =====================================================================
 
@@ -56,7 +56,7 @@ include_directories ("${PROJECT_SOURCE_DIR}/..")
 
 # Library can be compiled from multiple source files
 # Convention: the main souce file is named <libname>.c
-# 
+#
 add_library(${LIBNAME} SHARED ${SOURCEFILES})
 
 
@@ -67,10 +67,10 @@ if(USE_CUDA)
 find_package(CUDA 9.0 REQUIRED)
 message(STATUS "Found CUDA ${CUDA_VERSION_STRING} at ${CUDA_TOOLKIT_ROOT_DIR}")
 message("---- CUDA_INCLUDE_DIRS   = ${CUDA_INCLUDE_DIRS}")
-message("---- CUDA_LIBRARIES      = ${CUDA_LIBRARIES} ${CUDA_cusolver_LIBRARY}" )   
-message("---- CUDA_CUBLAS_LIBRARIES    = ${CUDA_CUBLAS_LIBRARIES}" )   
+message("---- CUDA_LIBRARIES      = ${CUDA_LIBRARIES} ${CUDA_cusolver_LIBRARY}" )
+message("---- CUDA_CUBLAS_LIBRARIES    = ${CUDA_CUBLAS_LIBRARIES}" )
 target_include_directories(${LIBNAME} PUBLIC ${CUDA_INCLUDE_DIRS})
-target_link_libraries(${LIBNAME} PRIVATE ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} ${CUDA_cusolver_LIBRARY}) 
+target_link_libraries(${LIBNAME} PRIVATE ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} ${CUDA_cusolver_LIBRARY})
 target_compile_options(${LIBNAME} PUBLIC -DHAVE_CUDA)
 endif(USE_CUDA)
 
@@ -79,9 +79,9 @@ endif(USE_CUDA)
 if(USE_MAGMA)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(MAGMA REQUIRED magma)
-message("---- MAGMA_LIBRARY_DIRS =  ${MAGMA_LIBRARY_DIRS}") 
-message("---- MAGMA_LIBRARIES    =  ${MAGMA_LIBRARIES}" )   
-message("---- MAGMA_CFLAGS_OTHER =  ${MAGMA_CFLAGS_OTHER}" ) 
+message("---- MAGMA_LIBRARY_DIRS =  ${MAGMA_LIBRARY_DIRS}")
+message("---- MAGMA_LIBRARIES    =  ${MAGMA_LIBRARIES}" )
+message("---- MAGMA_CFLAGS_OTHER =  ${MAGMA_CFLAGS_OTHER}" )
 target_include_directories(${LIBNAME} PUBLIC ${MAGMA_INCLUDE_DIRS})
 target_link_libraries(${LIBNAME} PRIVATE ${MAGMA_LIBRARIES})
 target_compile_options(${LIBNAME} PRIVATE ${MAGMA_CFLAGS_OTHER})
@@ -92,26 +92,18 @@ endif(USE_MAGMA)
 
 
 if(USE_QDWHPARTIAL)
-message("---- QDWHPARTIAL_INCLUDE_PATH =  ${QDWHPARTIAL_INCLUDE_PATH}") 
-message("---- QDWHPARTIAL_LIBRARIES    =  ${QDWHPARTIAL_LIBRARIES}" )   
+message("---- QDWHPARTIAL_INCLUDE_PATH =  ${QDWHPARTIAL_INCLUDE_PATH}")
+message("---- QDWHPARTIAL_LIBRARIES    =  ${QDWHPARTIAL_LIBRARIES}" )
 target_include_directories(${LIBNAME} PUBLIC ${QDWHPARTIAL_INCLUDE_PATH})
 target_link_libraries(${LIBNAME} PRIVATE ${QDWHPARTIAL_LIBRARIES})
 set_target_properties(${LIBNAME} PROPERTIES COMPILE_FLAGS "-DHAVE_QDWHpartial")
 target_compile_options(${LIBNAME} PUBLIC -DUSE_QDWHPARTIAL)
 endif(USE_QDWHPARTIAL)
 
+target_link_libraries(${LIBNAME} PRIVATE CLIcore)
+
 message("---------------------------------------")
 
 
 install(TARGETS ${LIBNAME} DESTINATION lib)
 install(FILES ${INCLUDEFILES} DESTINATION include/${SRCNAME})
-
-
-
-
-
-
-
-
-
-
