--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ message("---- MAGMA_LIBRARY_DIRS =  ${MAGMA_LIBRARY_DIRS}")
 message("---- MAGMA_LIBRARIES    =  ${MAGMA_LIBRARIES}" )
 message("---- MAGMA_CFLAGS_OTHER =  ${MAGMA_CFLAGS_OTHER}" )
 target_include_directories(${LIBNAME} PUBLIC ${MAGMA_INCLUDE_DIRS})
+target_link_directories(${LIBNAME} PUBLIC ${MAGMA_LIBRARY_DIRS})
 target_link_libraries(${LIBNAME} PRIVATE ${MAGMA_LIBRARIES})
 target_compile_options(${LIBNAME} PRIVATE ${MAGMA_CFLAGS_OTHER})
 target_compile_options(${LIBNAME} PUBLIC -DHAVE_CUDA -DHAVE_MAGMA -DUSE_MAGMA)
